# mytoolbox

./: .flake8  .pre-commit-config.yaml  404.html  Makefile  Pipfile  README.md  buildspec.yml  catalog-info.yaml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
cfn/: README.md  github-connection.yaml  pipeline.yaml
docs/: index.md
src/mytoolbox/: __init__.py  cli.py
tests/cli/: test_version.py
