[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mytoolbox"
authors = [{name = "Willie Lima", email = "williecadete@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "typer==0.9.0",
]


[project.urls]
Home = "https://github.com/willie-cadete/mytoolbox"

[project.scripts]
mytoolbox = "mytoolbox.cli:app"
