[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mytoolbox"
authors = [{name = "Willie Lima", email = "w@willielima.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Topic :: Utilities",
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "typer==0.9.0",
]

[project.urls]
Home = "https://github.com/willie-cadete/mytoolbox"

[project.scripts]
mytoolbox = "mytoolbox.cli:app"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.bandit]
exclude_dirs = ["tests"]
